fix(css): Dark mode fixes

--- a/packages/components-css/.storybook/preview.css
+++ b/packages/components-css/.storybook/preview.css
@@ -8,6 +8,5 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 body {
-  @apply font-sans;
-  @apply bg-standard-default-subtle;
+  @apply font-sans bg-standard-default-subtle text-standard-default-strong;
 }
